styles.css
/* ... */
.download_button,
.official_download_button {
  box-shadow: 0px 5px #d62196;
}

#download_page_content,
#download_page_content section {
  background-color: transparent;
  padding-bottom: 0;
}

#download_page {
  width: clamp(20rem, 45vw, 55rem);
  margin: auto;
}

#download_page .download_button {
  width: -webkit-fill-available;
  width: -moz-available;
}

#download_page .download_page_instruction {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 0 5em;
  background-color: #ffffff;
  padding: 1em;
  border-radius: var(--BorderRadius);
  border: #222f3e 1px solid;
  width: inherit;
}

.download_page_text span {
  font-weight: 700;
  width: 5vw;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.download_page_no_marker {
  list-style: none;
}

#download_page h2 {
  width: 100%;
  text-align: center;
  margin-block-end: 0em;
  margin-block-start: 15vh;
}

.release_notes {
  display: block;
  text-align: center;
}

.download_button,
.official_download_button,
.beta_download_button {
  background-color: #222f3e;
  width: 14.119em;
  padding: 0.813em 1.375em;
  border-radius: var(--BorderRadius);
  text-decoration: none;
  color: #ffff;
  font-weight: 700;
  transition: box-shadow 0.5s ease !important;
  text-align: center;
  margin: 0.625em 0;
}

.official_download_button:hover,
.download_button:hover {
  box-shadow: 0 0 0px 2px #d62196;
}

/* 💬❗ DOWNLOAD PAGES */

/* 💬 WHAT'S NEW PAGE */

#other .wn-content {
  flex-direction: column;
}

#whats-new section:not(#wn-intro) {
  padding-right: 1em;
  padding-left: 1em;
}

#whats-new section:not(#wn-intro):nth-child(odd) {
  padding-bottom: 5em;
  padding-top: 0.5em;
}

#other li {
  border-radius: var(--BorderRadius);
  font-weight: 300;
  margin: 0.6em;
  padding: 0.4rem;
  width: fit-content;
}

#other {
  justify-content: center;
}

#other ul {
  width: fit-content;
  padding: 0;
}

#whats-new img {
  border-radius: var(--BorderRadius);
  max-width: 100%;
}

.wn-content,
#wn-intro {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.wn-content div {
  color: var(--plyr-color-main);
  margin: 1rem 0;
  background: white;
  border: #f1f1f1 1px solid;
  border-radius: var(--BorderRadius);
  padding: 0.5rem 1.5rem;
  width: fit-content;
}

#other .wn-content {
  width: clamp(20rem, 70vw, 50rem);
  margin: auto;
}

#wn-intro h1 {
  font-size: 15vw;
  font-weight: 900;
  margin: 0;
}

#wn-intro p {
  font-size: 4.8vw;
  font-weight: 300;
}

#wn-download_section {
  background: transparent;
  padding-top: 2em;
  align-items: center;
}

#wn-intro * {
  margin: 0;
}

#wn-intro {
  padding: 15vh 20vw 10vh;
  gap: 1em;
  background-image: url(./media/backgrounds/whats_new_bg.png);
}

#wn-intro section {
  padding-bottom: 0;
}

#wn-intro img {
  left: 12vw;
  height: 30%;
  z-index: 1;
}

#clipping_masks {
  background-image: url(./media/backgrounds/clipping-masks.png);
  background-position: bottom;
}

/* 💬❗ WHAT'S NEW PAGE */

/* 💬 COMMON FLEX */

body,
header,
nav ul,
.flex,
#intro div,
#system,
#compare,
#features,
#faq,
#features figure,
#download aside,
#download_section,
#download_page,
.download_page_text,
.download_buttons,
.beta_download_buttons,
.download_page_text div,
#missing404,
#wn-download_section,
#download_box {
  display: flex;
}

body,
#menu,
#intro div,
#system,
#faq,
#features,
#download aside,
#download_page,
.download_buttons,
.download_page_text,
#download_section,
#wn-download_section {
  flex-flow: column;
}

label[for="deselectrad"] {
  flex-grow: 1;
}

header,
#system,
#compare,
#features,
#faq,
#features figure,
#features .left,
#features .right,
#download aside,
#download_section,
#download_page,
.download_page_text,
#intro,
#missing404,
.beta_download_buttons {
  align-items: center;
}

nav ul,
#system,
#features,
#faq,
#features figure,
#features .left,
#features .right,
#download aside,
#download_section {
  justify-content: space-around;
}

#intro div,
.download_page_text,
#intro,
#missing404,
.beta_download_buttons {
  justify-content: center;
}

#intro div {
  align-content: center;
}

#compare,
#features figure,
#intro {
  flex-wrap: wrap;
}

/* 💬❗ COMMON FLEX */

/* 💬 COMMON COLOR */

footer,
section:nth-of-type(odd),
#compare li,
#features h3,
#features .left,
#features .right {
  background-color: #222f3e;
}

#compare h2,
#features h2,
#faq div,
#faq label,
.wn-content div,
#other li {
  color: #222f3e;
}

.dash {
  color: #d62196;
}

nav a,
nav label,
footer,
label[for="toggle"],
#toggle,
#intro,
#system,
#compare ul,
#faq h2,
#features figcaption,
#features label,
#clipping_masks,
#wn-intro {
  color: #ffffff;
}

#faq label,
#faq div,
#download figure,
#plugins a:link,
#other li {
  background: #fff;
}

/* 💬❗ COMMON COLOR */

/* 💬 COMMON SIZE AND SPACING */

#system,
#clipping_masks,
#other {
  position: relative;
}

#faq::after,
#system::after,
#other::after {
  position: absolute;
  left: 1em;
  bottom: 1em;
  font-size: smaller;
  opacity: 25%;
}

.nomarker {
  list-style: none;
  margin-block-start: 0em;
  margin-block-end: 0em;
  padding-inline-start: 0px;
  padding-left: 10vw;
  padding-right: 10vw;
}

#compare h2,
#features h2,
#download h2,
#whats-new h2 {
  width: 100%;
  text-align: center;
}

/* 💬❗ COMMON SIZE AND SPACING */

/* 💬 COMMON FONT */

.bold,
#compare .bold {
  font-weight: 600;
}

[class^="bi-"]::before,
[class*=" bi-"]::before {
  font-weight: inherit !important;
}

/* 💬❗ COMMON FONT */

/* 💬 COMMON BACKGROUND */

#system {
  background: url(media/backgrounds/system_bg.png);
}

#faq {
  background: url(media/backgrounds/footer_bg.png);
}

#intro {
  padding: 15vh 20vw 10vh;
  gap: 2em;
  background: url(media/backgrounds/header_bg.png);
}

#faq,
#system,
#intro,
#wn-intro,
#other {
  background-attachment: fixed !important;
  background-position: center !important;
}

#system,
#intro,
#wn-intro,
#faq,
#other {
  background-size: cover;
  background-repeat: no-repeat;
}
/* ... */

